# AI_Visualguidance

./: .gitignore  README.md  config_trained_model.sh  copy_trained_model.sh
ai_drone/: CMakeLists.txt  package.xml
ai_drone/launch/: ai_drone.launch
darknet_ros/: README.md
darknet_ros/darknet/: Makefile  darknet
darknet_ros/darknet/data/: obj.data  test.txt  train.txt
darknet_ros/darknet_ros/: CMakeLists.txt
darknet_ros/darknet_ros/config/: ros.yaml  yolov3_custom.yaml
darknet_ros/darknet_ros/launch/: darknet_ros.launch  yolo_v3.launch
darknet_ros/darknet_ros/src/: YoloObjectDetector.cpp
darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov3_Endale.cfg  yolov3_endale1.cfg
darknet_ros/darknet_ros_msgs/msg/: BoundingBox.msg
local_mapping/: CMakeLists.txt  package.xml
local_mapping/include/: local_mapping_node.h
local_mapping/launch/: local_mapping.launch
local_mapping/src/: local_mapping_node.cpp  old_pathfinder_node.cpp  old_pathfinder_node.h
mission/: CMakeLists.txt  package.xml
mission/include/mission/: mission_node.h
mission/src/: auto_takeoff_land.cpp  mission_node.cpp  mission_window.cpp
object_localization/: CMakeLists.txt  package.xml
object_localization/include/: object_localization_node.h
object_localization/msg/: detected_object_info.msg
object_localization/src/: object_localization_node.cpp
srf08_ranging/: CMakeLists.txt  README.md  package.xml
srf08_ranging/include/: srf08_ranging_node.h
srf08_ranging/launch/: srf08_ranging.launch
srf08_ranging/msg/: obstacle_distance.msg
srf08_ranging/src/: srf08_ranging_node.cpp
video_detection_python/: README.md  video_detection.py
video_detection_python/training-files/: object_detection_yolo.py
video_detection_python/training-files/custom/: objects.names  test.txt  train.txt
zed-ros-wrapper/zed_wrapper/params/: common.yaml
zed-ros-wrapper/zed_wrapper/src/nodelet/src/: zed_wrapper_nodelet.cpp
zed_data_subscribe/: CMakeLists.txt  package.xml
zed_data_subscribe/include/: zed_data_sub.h
zed_data_subscribe/launch/: zed_data.launch
zed_data_subscribe/msg/: detected_object.msg  detected_object_info.msg
zed_data_subscribe/src/: zed_data_sub.cpp
